Compilador 1.1/Compilador/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    RETORNAR
    SINO

Grammar

Rule 0     S' -> programa
Rule 1     programa -> INICIO bloque_codigo FIN
Rule 2     programa -> ID bloque_codigo FIN
Rule 3     bloque_codigo -> LLAVE_A lista_declaraciones LLAVE_C
Rule 4     bloque_codigo -> LLAVE_A lista_declaraciones error
Rule 5     lista_declaraciones -> lista_declaraciones declaracion
Rule 6     lista_declaraciones -> lista_declaraciones control
Rule 7     lista_declaraciones -> lista_declaraciones dispositivo
Rule 8     lista_declaraciones -> lista_declaraciones funcion
Rule 9     lista_declaraciones -> declaracion
Rule 10    lista_declaraciones -> control
Rule 11    lista_declaraciones -> dispositivo
Rule 12    lista_declaraciones -> funcion
Rule 13    declaracion -> IMPRIMIR PARENTESIS_A expresion PARENTESIS_B PUNTOCOMA
Rule 14    declaracion -> RETRASO PARENTESIS_A expresion PARENTESIS_B PUNTOCOMA
Rule 15    declaracion -> tipo ID PUNTOCOMA
Rule 16    declaracion -> tipo ID ASIGNACION expresion PUNTOCOMA
Rule 17    declaracion -> tipo ID CORCHETE_A NUMERO CORCHETE_B PUNTOCOMA
Rule 18    declaracion -> ID CORCHETE_A NUMERO CORCHETE_B ASIGNACION expresion PUNTOCOMA
Rule 19    declaracion -> tipo ID ASIGNACION error PUNTOCOMA
Rule 20    declaracion -> ID PARENTESIS_A argumentos PARENTESIS_B PUNTOCOMA
Rule 21    tipo -> ENTERO
Rule 22    tipo -> REAL_TIPO
Rule 23    tipo -> BOOLEANO
Rule 24    tipo -> CADENA_TIPO
Rule 25    control -> si
Rule 26    control -> mientras
Rule 27    control -> para
Rule 28    control -> romper
Rule 29    si -> SI PARENTESIS_A expresion PARENTESIS_B bloque_codigo
Rule 30    si -> SI PARENTESIS_A expresion PARENTESIS_B bloque_codigo ID bloque_codigo
Rule 31    mientras -> MIENTRAS PARENTESIS_A expresion PARENTESIS_B bloque_codigo
Rule 32    para -> PARA PARENTESIS_A asignacion_para PUNTOCOMA expresion PUNTOCOMA actualizacion_para PARENTESIS_B bloque_codigo
Rule 33    asignacion_para -> tipo ID ASIGNACION expresion
Rule 34    asignacion_para -> ID ASIGNACION expresion
Rule 35    actualizacion_para -> ID ASIGNACION expresion
Rule 36    actualizacion_para -> ID MASMAS
Rule 37    actualizacion_para -> ID MENOSMENOS
Rule 38    funcion -> FUNC ID PARENTESIS_A parametros PARENTESIS_B bloque_codigo
Rule 39    parametros -> parametro
Rule 40    parametros -> parametro COMA parametros
Rule 41    parametros -> empty
Rule 42    parametro -> tipo ID
Rule 43    dispositivo -> definir_dispositivo
Rule 44    dispositivo -> accion_dispositivo
Rule 45    tipo_dispositivo -> SERVO
Rule 46    tipo_dispositivo -> LED
Rule 47    tipo_dispositivo -> MOTOR
Rule 48    tipo_dispositivo -> SENSOR
Rule 49    tipo_dispositivo -> BUZZER
Rule 50    tipo_dispositivo -> SENSOR_ULTRASONICO
Rule 51    tipo_dispositivo -> SENSOR_COLOR
Rule 52    tipo_dispositivo -> SENSOR_TOQUE
Rule 53    tipo_dispositivo -> SENSOR_GIRO
Rule 54    tipo_dispositivo -> RCX
Rule 55    tipo_dispositivo -> NXT
Rule 56    tipo_dispositivo -> EV3
Rule 57    tipo_dispositivo -> HUB_SPIKE_PRIME
Rule 58    tipo_dispositivo -> HUB_SPIKE_ESSENTIAL
Rule 59    tipo_dispositivo -> HUB_ROBOT_INVENTOR
Rule 60    tipo_dispositivo -> HUB_TECHNIC_LARGE
Rule 61    tipo_dispositivo -> HUB_POWERED_UP
Rule 62    tipo_dispositivo -> MOTOR_SERVO_GRANDE_EV3
Rule 63    tipo_dispositivo -> MOTOR_SERVO_MEDIANO_EV3
Rule 64    tipo_dispositivo -> SERVOMOTOR_NXT
Rule 65    tipo_dispositivo -> MOTOR_ANGULAR_GRANDE
Rule 66    tipo_dispositivo -> MOTOR_ANGULAR_MEDIANO
Rule 67    tipo_dispositivo -> MOTOR_POWERED_UP_BOOST
Rule 68    tipo_dispositivo -> MOTOR_POWERED_UP
Rule 69    tipo_dispositivo -> MOTOR_BOOST
Rule 70    definir_dispositivo -> tipo_dispositivo ID ASIGNACION objeto_dispositivo PUNTOCOMA
Rule 71    objeto_dispositivo -> LLAVE_A lista_atributos LLAVE_C
Rule 72    lista_atributos -> lista_atributos COMA atributo
Rule 73    lista_atributos -> atributo
Rule 74    atributo -> ID ASIGNACION expresion
Rule 75    accion_dispositivo -> ID FLECHA accion PARENTESIS_A expresion_opt PARENTESIS_B PUNTOCOMA
Rule 76    accion -> ENCENDER
Rule 77    accion -> APAGAR
Rule 78    accion -> VALOR
Rule 79    accion -> GIRARSERVO
Rule 80    accion -> GIRARMOTOR
Rule 81    expresion_opt -> expresion
Rule 82    expresion_opt -> empty
Rule 83    expresion -> expresion op_binario expresion
Rule 84    expresion -> op_unario expresion
Rule 85    expresion -> PARENTESIS_A expresion PARENTESIS_B
Rule 86    expresion -> ID FLECHA VALOR PARENTESIS_A expresion_opt PARENTESIS_B
Rule 87    expresion -> ID
Rule 88    expresion -> ID CORCHETE_A NUMERO CORCHETE_B
Rule 89    expresion -> NUMERO
Rule 90    expresion -> REAL
Rule 91    expresion -> CADENA_TEXTO
Rule 92    expresion -> TRUE
Rule 93    expresion -> FALSE
Rule 94    argumentos -> expresion
Rule 95    argumentos -> expresion COMA argumentos
Rule 96    argumentos -> empty
Rule 97    op_binario -> SUMA
Rule 98    op_binario -> RESTA
Rule 99    op_binario -> MULTIPLICACION
Rule 100   op_binario -> DIVISION
Rule 101   op_binario -> MODULO
Rule 102   op_binario -> IGUAL
Rule 103   op_binario -> DIFERENTE
Rule 104   op_binario -> MENORQUE
Rule 105   op_binario -> MAYORQUE
Rule 106   op_binario -> MENORIGUAL
Rule 107   op_binario -> MAYORIGUAL
Rule 108   op_binario -> AND
Rule 109   op_binario -> OR
Rule 110   op_unario -> NOT
Rule 111   op_unario -> RESTA
Rule 112   romper -> ROMPER PUNTOCOMA
Rule 113   empty -> <empty>

Terminals, with rules where they appear

AND                  : 108
APAGAR               : 77
ASIGNACION           : 16 18 19 33 34 35 70 74
BOOLEANO             : 23
BUZZER               : 49
CADENA_TEXTO         : 91
CADENA_TIPO          : 24
COMA                 : 40 72 95
CORCHETE_A           : 17 18 88
CORCHETE_B           : 17 18 88
DIFERENTE            : 103
DIVISION             : 100
ENCENDER             : 76
ENTERO               : 21
EV3                  : 56
FALSE                : 93
FIN                  : 1 2
FLECHA               : 75 86
FUNC                 : 38
GIRARMOTOR           : 80
GIRARSERVO           : 79
HUB_POWERED_UP       : 61
HUB_ROBOT_INVENTOR   : 59
HUB_SPIKE_ESSENTIAL  : 58
HUB_SPIKE_PRIME      : 57
HUB_TECHNIC_LARGE    : 60
ID                   : 2 15 16 17 18 19 20 30 33 34 35 36 37 38 42 70 74 75 86 87 88
IGUAL                : 102
IMPRIMIR             : 13
INICIO               : 1
LED                  : 46
LLAVE_A              : 3 4 71
LLAVE_C              : 3 71
MASMAS               : 36
MAYORIGUAL           : 107
MAYORQUE             : 105
MENORIGUAL           : 106
MENORQUE             : 104
MENOSMENOS           : 37
MIENTRAS             : 31
MODULO               : 101
MOTOR                : 47
MOTOR_ANGULAR_GRANDE : 65
MOTOR_ANGULAR_MEDIANO : 66
MOTOR_BOOST          : 69
MOTOR_POWERED_UP     : 68
MOTOR_POWERED_UP_BOOST : 67
MOTOR_SERVO_GRANDE_EV3 : 62
MOTOR_SERVO_MEDIANO_EV3 : 63
MULTIPLICACION       : 99
NOT                  : 110
NUMERO               : 17 18 88 89
NXT                  : 55
OR                   : 109
PARA                 : 32
PARENTESIS_A         : 13 14 20 29 30 31 32 38 75 85 86
PARENTESIS_B         : 13 14 20 29 30 31 32 38 75 85 86
PUNTOCOMA            : 13 14 15 16 17 18 19 20 32 32 70 75 112
RCX                  : 54
REAL                 : 90
REAL_TIPO            : 22
RESTA                : 98 111
RETORNAR             : 
RETRASO              : 14
ROMPER               : 112
SENSOR               : 48
SENSOR_COLOR         : 51
SENSOR_GIRO          : 53
SENSOR_TOQUE         : 52
SENSOR_ULTRASONICO   : 50
SERVO                : 45
SERVOMOTOR_NXT       : 64
SI                   : 29 30
SINO                 : 
SUMA                 : 97
TRUE                 : 92
VALOR                : 78 86
error                : 4 19

Nonterminals, with rules where they appear

accion               : 75
accion_dispositivo   : 44
actualizacion_para   : 32
argumentos           : 20 95
asignacion_para      : 32
atributo             : 72 73
bloque_codigo        : 1 2 29 30 30 31 32 38
control              : 6 10
declaracion          : 5 9
definir_dispositivo  : 43
dispositivo          : 7 11
empty                : 41 82 96
expresion            : 13 14 16 18 29 30 31 32 33 34 35 74 81 83 83 84 85 94 95
expresion_opt        : 75 86
funcion              : 8 12
lista_atributos      : 71 72
lista_declaraciones  : 3 4 5 6 7 8
mientras             : 26
objeto_dispositivo   : 70
op_binario           : 83
op_unario            : 84
para                 : 27
parametro            : 39 40
parametros           : 38 40
programa             : 0
romper               : 28
si                   : 25
tipo                 : 15 16 17 19 33 42
tipo_dispositivo     : 70

Parsing method: LALR

state 0

    (0) S' -> . programa
    (1) programa -> . INICIO bloque_codigo FIN
    (2) programa -> . ID bloque_codigo FIN

    INICIO          shift and go to state 2
    ID              shift and go to state 3

    programa                       shift and go to state 1

state 1

    (0) S' -> programa .



state 2

    (1) programa -> INICIO . bloque_codigo FIN
    (3) bloque_codigo -> . LLAVE_A lista_declaraciones LLAVE_C
    (4) bloque_codigo -> . LLAVE_A lista_declaraciones error

    LLAVE_A         shift and go to state 5

    bloque_codigo                  shift and go to state 4

state 3

    (2) programa -> ID . bloque_codigo FIN
    (3) bloque_codigo -> . LLAVE_A lista_declaraciones LLAVE_C
    (4) bloque_codigo -> . LLAVE_A lista_declaraciones error

    LLAVE_A         shift and go to state 5

    bloque_codigo                  shift and go to state 6

state 4

    (1) programa -> INICIO bloque_codigo . FIN

    FIN             shift and go to state 7


state 5

    (3) bloque_codigo -> LLAVE_A . lista_declaraciones LLAVE_C
    (4) bloque_codigo -> LLAVE_A . lista_declaraciones error
    (5) lista_declaraciones -> . lista_declaraciones declaracion
    (6) lista_declaraciones -> . lista_declaraciones control
    (7) lista_declaraciones -> . lista_declaraciones dispositivo
    (8) lista_declaraciones -> . lista_declaraciones funcion
    (9) lista_declaraciones -> . declaracion
    (10) lista_declaraciones -> . control
    (11) lista_declaraciones -> . dispositivo
    (12) lista_declaraciones -> . funcion
    (13) declaracion -> . IMPRIMIR PARENTESIS_A expresion PARENTESIS_B PUNTOCOMA
    (14) declaracion -> . RETRASO PARENTESIS_A expresion PARENTESIS_B PUNTOCOMA
    (15) declaracion -> . tipo ID PUNTOCOMA
    (16) declaracion -> . tipo ID ASIGNACION expresion PUNTOCOMA
    (17) declaracion -> . tipo ID CORCHETE_A NUMERO CORCHETE_B PUNTOCOMA
    (18) declaracion -> . ID CORCHETE_A NUMERO CORCHETE_B ASIGNACION expresion PUNTOCOMA
    (19) declaracion -> . tipo ID ASIGNACION error PUNTOCOMA
    (20) declaracion -> . ID PARENTESIS_A argumentos PARENTESIS_B PUNTOCOMA
    (25) control -> . si
    (26) control -> . mientras
    (27) control -> . para
    (28) control -> . romper
    (43) dispositivo -> . definir_dispositivo
    (44) dispositivo -> . accion_dispositivo
    (38) funcion -> . FUNC ID PARENTESIS_A parametros PARENTESIS_B bloque_codigo
    (21) tipo -> . ENTERO
    (22) tipo -> . REAL_TIPO
    (23) tipo -> . BOOLEANO
    (24) tipo -> . CADENA_TIPO
    (29) si -> . SI PARENTESIS_A expresion PARENTESIS_B bloque_codigo
    (30) si -> . SI PARENTESIS_A expresion PARENTESIS_B bloque_codigo ID bloque_codigo
    (31) mientras -> . MIENTRAS PARENTESIS_A expresion PARENTESIS_B bloque_codigo
    (32) para -> . PARA PARENTESIS_A asignacion_para PUNTOCOMA expresion PUNTOCOMA actualizacion_para PARENTESIS_B bloque_codigo
    (112) romper -> . ROMPER PUNTOCOMA
    (70) definir_dispositivo -> . tipo_dispositivo ID ASIGNACION objeto_dispositivo PUNTOCOMA
    (75) accion_dispositivo -> . ID FLECHA accion PARENTESIS_A expresion_opt PARENTESIS_B PUNTOCOMA
    (45) tipo_dispositivo -> . SERVO
    (46) tipo_dispositivo -> . LED
    (47) tipo_dispositivo -> . MOTOR
    (48) tipo_dispositivo -> . SENSOR
    (49) tipo_dispositivo -> . BUZZER
    (50) tipo_dispositivo -> . SENSOR_ULTRASONICO
    (51) tipo_dispositivo -> . SENSOR_COLOR
    (52) tipo_dispositivo -> . SENSOR_TOQUE
    (53) tipo_dispositivo -> . SENSOR_GIRO
    (54) tipo_dispositivo -> . RCX
    (55) tipo_dispositivo -> . NXT
    (56) tipo_dispositivo -> . EV3
    (57) tipo_dispositivo -> . HUB_SPIKE_PRIME
    (58) tipo_dispositivo -> . HUB_SPIKE_ESSENTIAL
    (59) tipo_dispositivo -> . HUB_ROBOT_INVENTOR
    (60) tipo_dispositivo -> . HUB_TECHNIC_LARGE
    (61) tipo_dispositivo -> . HUB_POWERED_UP
    (62) tipo_dispositivo -> . MOTOR_SERVO_GRANDE_EV3
    (63) tipo_dispositivo -> . MOTOR_SERVO_MEDIANO_EV3
    (64) tipo_dispositivo -> . SERVOMOTOR_NXT
    (65) tipo_dispositivo -> . MOTOR_ANGULAR_GRANDE
    (66) tipo_dispositivo -> . MOTOR_ANGULAR_MEDIANO
    (67) tipo_dispositivo -> . MOTOR_POWERED_UP_BOOST
    (68) tipo_dispositivo -> . MOTOR_POWERED_UP
    (69) tipo_dispositivo -> . MOTOR_BOOST

    IMPRIMIR        shift and go to state 13
    RETRASO         shift and go to state 14
    ID              shift and go to state 16
    FUNC            shift and go to state 23
    ENTERO          shift and go to state 24
    REAL_TIPO       shift and go to state 25
    BOOLEANO        shift and go to state 26
    CADENA_TIPO     shift and go to state 27
    SI              shift and go to state 28
    MIENTRAS        shift and go to state 29
    PARA            shift and go to state 30
    ROMPER          shift and go to state 31
    SERVO           shift and go to state 33
    LED             shift and go to state 34
    MOTOR           shift and go to state 35
    SENSOR          shift and go to state 36
    BUZZER          shift and go to state 37
    SENSOR_ULTRASONICO shift and go to state 38
    SENSOR_COLOR    shift and go to state 39
    SENSOR_TOQUE    shift and go to state 40
    SENSOR_GIRO     shift and go to state 41
    RCX             shift and go to state 42
    NXT             shift and go to state 43
    EV3             shift and go to state 44
    HUB_SPIKE_PRIME shift and go to state 45
    HUB_SPIKE_ESSENTIAL shift and go to state 46
    HUB_ROBOT_INVENTOR shift and go to state 47
    HUB_TECHNIC_LARGE shift and go to state 48
    HUB_POWERED_UP  shift and go to state 49
    MOTOR_SERVO_GRANDE_EV3 shift and go to state 50
    MOTOR_SERVO_MEDIANO_EV3 shift and go to state 51
    SERVOMOTOR_NXT  shift and go to state 52
    MOTOR_ANGULAR_GRANDE shift and go to state 53
    MOTOR_ANGULAR_MEDIANO shift and go to state 54
    MOTOR_POWERED_UP_BOOST shift and go to state 55
    MOTOR_POWERED_UP shift and go to state 56
    MOTOR_BOOST     shift and go to state 57

    lista_declaraciones            shift and go to state 8
    declaracion                    shift and go to state 9
    control                        shift and go to state 10
    dispositivo                    shift and go to state 11
    funcion                        shift and go to state 12
    tipo                           shift and go to state 15
    si                             shift and go to state 17
    mientras                       shift and go to state 18
    para                           shift and go to state 19
    romper                         shift and go to state 20
    definir_dispositivo            shift and go to state 21
    accion_dispositivo             shift and go to state 22
    tipo_dispositivo               shift and go to state 32

state 6

    (2) programa -> ID bloque_codigo . FIN

    FIN             shift and go to state 58


state 7

    (1) programa -> INICIO bloque_codigo FIN .

    $end            reduce using rule 1 (programa -> INICIO bloque_codigo FIN .)


state 8

    (3) bloque_codigo -> LLAVE_A lista_declaraciones . LLAVE_C
    (4) bloque_codigo -> LLAVE_A lista_declaraciones . error
    (5) lista_declaraciones -> lista_declaraciones . declaracion
    (6) lista_declaraciones -> lista_declaraciones . control
    (7) lista_declaraciones -> lista_declaraciones . dispositivo
    (8) lista_declaraciones -> lista_declaraciones . funcion
    (13) declaracion -> . IMPRIMIR PARENTESIS_A expresion PARENTESIS_B PUNTOCOMA
    (14) declaracion -> . RETRASO PARENTESIS_A expresion PARENTESIS_B PUNTOCOMA
    (15) declaracion -> . tipo ID PUNTOCOMA
    (16) declaracion -> . tipo ID ASIGNACION expresion PUNTOCOMA
    (17) declaracion -> . tipo ID CORCHETE_A NUMERO CORCHETE_B PUNTOCOMA
    (18) declaracion -> . ID CORCHETE_A NUMERO CORCHETE_B ASIGNACION expresion PUNTOCOMA
    (19) declaracion -> . tipo ID ASIGNACION error PUNTOCOMA
    (20) declaracion -> . ID PARENTESIS_A argumentos PARENTESIS_B PUNTOCOMA
    (25) control -> . si
    (26) control -> . mientras
    (27) control -> . para
    (28) control -> . romper
    (43) dispositivo -> . definir_dispositivo
    (44) dispositivo -> . accion_dispositivo
    (38) funcion -> . FUNC ID PARENTESIS_A parametros PARENTESIS_B bloque_codigo
    (21) tipo -> . ENTERO
    (22) tipo -> . REAL_TIPO
    (23) tipo -> . BOOLEANO
    (24) tipo -> . CADENA_TIPO
    (29) si -> . SI PARENTESIS_A expresion PARENTESIS_B bloque_codigo
    (30) si -> . SI PARENTESIS_A expresion PARENTESIS_B bloque_codigo ID bloque_codigo
    (31) mientras -> . MIENTRAS PARENTESIS_A expresion PARENTESIS_B bloque_codigo
    (32) para -> . PARA PARENTESIS_A asignacion_para PUNTOCOMA expresion PUNTOCOMA actualizacion_para PARENTESIS_B bloque_codigo
    (112) romper -> . ROMPER PUNTOCOMA
    (70) definir_dispositivo -> . tipo_dispositivo ID ASIGNACION objeto_dispositivo PUNTOCOMA
    (75) accion_dispositivo -> . ID FLECHA accion PARENTESIS_A expresion_opt PARENTESIS_B PUNTOCOMA
    (45) tipo_dispositivo -> . SERVO
    (46) tipo_dispositivo -> . LED
    (47) tipo_dispositivo -> . MOTOR
    (48) tipo_dispositivo -> . SENSOR
    (49) tipo_dispositivo -> . BUZZER
    (50) tipo_dispositivo -> . SENSOR_ULTRASONICO
    (51) tipo_dispositivo -> . SENSOR_COLOR
    (52) tipo_dispositivo -> . SENSOR_TOQUE
    (53) tipo_dispositivo -> . SENSOR_GIRO
    (54) tipo_dispositivo -> . RCX
    (55) tipo_dispositivo -> . NXT
    (56) tipo_dispositivo -> . EV3
    (57) tipo_dispositivo -> . HUB_SPIKE_PRIME
    (58) tipo_dispositivo -> . HUB_SPIKE_ESSENTIAL
    (59) tipo_dispositivo -> . HUB_ROBOT_INVENTOR
    (60) tipo_dispositivo -> . HUB_TECHNIC_LARGE
    (61) tipo_dispositivo -> . HUB_POWERED_UP
    (62) tipo_dispositivo -> . MOTOR_SERVO_GRANDE_EV3
    (63) tipo_dispositivo -> . MOTOR_SERVO_MEDIANO_EV3
    (64) tipo_dispositivo -> . SERVOMOTOR_NXT
    (65) tipo_dispositivo -> . MOTOR_ANGULAR_GRANDE
    (66) tipo_dispositivo -> . MOTOR_ANGULAR_MEDIANO
    (67) tipo_dispositivo -> . MOTOR_POWERED_UP_BOOST
    (68) tipo_dispositivo -> . MOTOR_POWERED_UP
    (69) tipo_dispositivo -> . MOTOR_BOOST

    LLAVE_C         shift and go to state 59
    error           shift and go to state 60
    IMPRIMIR        shift and go to state 13
    RETRASO         shift and go to state 14
    ID              shift and go to state 16
    FUNC            shift and go to state 23
    ENTERO          shift and go to state 24
    REAL_TIPO       shift and go to state 25
    BOOLEANO        shift and go to state 26
    CADENA_TIPO     shift and go to state 27
    SI              shift and go to state 28
    MIENTRAS        shift and go to state 29
    PARA            shift and go to state 30
    ROMPER          shift and go to state 31
    SERVO           shift and go to state 33
    LED             shift and go to state 34
    MOTOR           shift and go to state 35
    SENSOR          shift and go to state 36
    BUZZER          shift and go to state 37
    SENSOR_ULTRASONICO shift and go to state 38
    SENSOR_COLOR    shift and go to state 39
    SENSOR_TOQUE    shift and go to state 40
    SENSOR_GIRO     shift and go to state 41
    RCX             shift and go to state 42
    NXT             shift and go to state 43
    EV3             shift and go to state 44
    HUB_SPIKE_PRIME shift and go to state 45
    HUB_SPIKE_ESSENTIAL shift and go to state 46
    HUB_ROBOT_INVENTOR shift and go to state 47
    HUB_TECHNIC_LARGE shift and go to state 48
    HUB_POWERED_UP  shift and go to state 49
    MOTOR_SERVO_GRANDE_EV3 shift and go to state 50
    MOTOR_SERVO_MEDIANO_EV3 shift and go to state 51
    SERVOMOTOR_NXT  shift and go to state 52
    MOTOR_ANGULAR_GRANDE shift and go to state 53
    MOTOR_ANGULAR_MEDIANO shift and go to state 54
    MOTOR_POWERED_UP_BOOST shift and go to state 55
    MOTOR_POWERED_UP shift and go to state 56
    MOTOR_BOOST     shift and go to state 57

    declaracion                    shift and go to state 61
    control                        shift and go to state 62
    dispositivo                    shift and go to state 63
    funcion                        shift and go to state 64
    tipo                           shift and go to state 15
    si                             shift and go to state 17
    mientras                       shift and go to state 18
    para                           shift and go to state 19
    romper                         shift and go to state 20
    definir_dispositivo            shift and go to state 21
    accion_dispositivo             shift and go to state 22
    tipo_dispositivo               shift and go to state 32

state 9

    (9) lista_declaraciones -> declaracion .

    LLAVE_C         reduce using rule 9 (lista_declaraciones -> declaracion .)
    error           reduce using rule 9 (lista_declaraciones -> declaracion .)
    IMPRIMIR        reduce using rule 9 (lista_declaraciones -> declaracion .)
    RETRASO         reduce using rule 9 (lista_declaraciones -> declaracion .)
    ID              reduce using rule 9 (lista_declaraciones -> declaracion .)
    FUNC            reduce using rule 9 (lista_declaraciones -> declaracion .)
    ENTERO          reduce using rule 9 (lista_declaraciones -> declaracion .)
    REAL_TIPO       reduce using rule 9 (lista_declaraciones -> declaracion .)
    BOOLEANO        reduce using rule 9 (lista_declaraciones -> declaracion .)
    CADENA_TIPO     reduce using rule 9 (lista_declaraciones -> declaracion .)
    SI              reduce using rule 9 (lista_declaraciones -> declaracion .)
    MIENTRAS        reduce using rule 9 (lista_declaraciones -> declaracion .)
    PARA            reduce using rule 9 (lista_declaraciones -> declaracion .)
    ROMPER          reduce using rule 9 (lista_declaraciones -> declaracion .)
    SERVO           reduce using rule 9 (lista_declaraciones -> declaracion .)
    LED             reduce using rule 9 (lista_declaraciones -> declaracion .)
    MOTOR           reduce using rule 9 (lista_declaraciones -> declaracion .)
    SENSOR          reduce using rule 9 (lista_declaraciones -> declaracion .)
    BUZZER          reduce using rule 9 (lista_declaraciones -> declaracion .)
    SENSOR_ULTRASONICO reduce using rule 9 (lista_declaraciones -> declaracion .)
    SENSOR_COLOR    reduce using rule 9 (lista_declaraciones -> declaracion .)
    SENSOR_TOQUE    reduce using rule 9 (lista_declaraciones -> declaracion .)
    SENSOR_GIRO     reduce using rule 9 (lista_declaraciones -> declaracion .)
    RCX             reduce using rule 9 (lista_declaraciones -> declaracion .)
    NXT             reduce using rule 9 (lista_declaraciones -> declaracion .)
    EV3             reduce using rule 9 (lista_declaraciones -> declaracion .)
    HUB_SPIKE_PRIME reduce using rule 9 (lista_declaraciones -> declaracion .)
    HUB_SPIKE_ESSENTIAL reduce using rule 9 (lista_declaraciones -> declaracion .)
    HUB_ROBOT_INVENTOR reduce using rule 9 (lista_declaraciones -> declaracion .)
    HUB_TECHNIC_LARGE reduce using rule 9 (lista_declaraciones -> declaracion .)
    HUB_POWERED_UP  reduce using rule 9 (lista_declaraciones -> declaracion .)
    MOTOR_SERVO_GRANDE_EV3 reduce using rule 9 (lista_declaraciones -> declaracion .)
    MOTOR_SERVO_MEDIANO_EV3 reduce using rule 9 (lista_declaraciones -> declaracion .)
    SERVOMOTOR_NXT  reduce using rule 9 (lista_declaraciones -> declaracion .)
    MOTOR_ANGULAR_GRANDE reduce using rule 9 (lista_declaraciones -> declaracion .)
    MOTOR_ANGULAR_MEDIANO reduce using rule 9 (lista_declaraciones -> declaracion .)
    MOTOR_POWERED_UP_BOOST reduce using rule 9 (lista_declaraciones -> declaracion .)
    MOTOR_POWERED_UP reduce using rule 9 (lista_declaraciones -> declaracion .)
    MOTOR_BOOST     reduce using rule 9 (lista_declaraciones -> declaracion .)


state 10

    (10) lista_declaraciones -> control .

    LLAVE_C         reduce using rule 10 (lista_declaraciones -> control .)
    error           reduce using rule 10 (lista_declaraciones -> control .)
    IMPRIMIR        reduce using rule 10 (lista_declaraciones -> control .)
    RETRASO         reduce using rule 10 (lista_declaraciones -> control .)
    ID              reduce using rule 10 (lista_declaraciones -> control .)
    FUNC            reduce using rule 10 (lista_declaraciones -> control .)
    ENTERO          reduce using rule 10 (lista_declaraciones -> control .)
    REAL_TIPO       reduce using rule 10 (lista_declaraciones -> control .)
    BOOLEANO        reduce using rule 10 (lista_declaraciones -> control .)
    CADENA_TIPO     reduce using rule 10 (lista_declaraciones -> control .)
    SI              reduce using rule 10 (lista_declaraciones -> control .)
    MIENTRAS        reduce using rule 10 (lista_declaraciones -> control .)
    PARA            reduce using rule 10 (lista_declaraciones -> control .)
    ROMPER          reduce using rule 10 (lista_declaraciones -> control .)
    SERVO           reduce using rule 10 (lista_declaraciones -> control .)
    LED             reduce using rule 10 (lista_declaraciones -> control .)
    MOTOR           reduce using rule 10 (lista_declaraciones -> control .)
    SENSOR          reduce using rule 10 (lista_declaraciones -> control .)
    BUZZER          reduce using rule 10 (lista_declaraciones -> control .)
    SENSOR_ULTRASONICO reduce using rule 10 (lista_declaraciones -> control .)
    SENSOR_COLOR    reduce using rule 10 (lista_declaraciones -> control .)
    SENSOR_TOQUE    reduce using rule 10 (lista_declaraciones -> control .)
    SENSOR_GIRO     reduce using rule 10 (lista_declaraciones -> control .)
    RCX             reduce using rule 10 (lista_declaraciones -> control .)
    NXT             reduce using rule 10 (lista_declaraciones -> control .)
    EV3             reduce using rule 10 (lista_declaraciones -> control .)
    HUB_SPIKE_PRIME reduce using rule 10 (lista_declaraciones -> control .)
    HUB_SPIKE_ESSENTIAL reduce using rule 10 (lista_declaraciones -> control .)
    HUB_ROBOT_INVENTOR reduce using rule 10 (lista_declaraciones -> control .)
    HUB_TECHNIC_LARGE reduce using rule 10 (lista_declaraciones -> control .)
    HUB_POWERED_UP  reduce using rule 10 (lista_declaraciones -> control .)
    MOTOR_SERVO_GRANDE_EV3 reduce using rule 10 (lista_declaraciones -> control .)
    MOTOR_SERVO_MEDIANO_EV3 reduce using rule 10 (lista_declaraciones -> control .)
    SERVOMOTOR_NXT  reduce using rule 10 (lista_declaraciones -> control .)
    MOTOR_ANGULAR_GRANDE reduce using rule 10 (lista_declaraciones -> control .)
    MOTOR_ANGULAR_MEDIANO reduce using rule 10 (lista_declaraciones -> control .)
    MOTOR_POWERED_UP_BOOST reduce using rule 10 (lista_declaraciones -> control .)
    MOTOR_POWERED_UP reduce using rule 10 (lista_declaraciones -> control .)
    MOTOR_BOOST     reduce using rule 10 (lista_declaraciones -> control .)


state 11

    (11) lista_declaraciones -> dispositivo .
